--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
   <div class="container">
-    <img src="images/logo-ig1.png" style="width: 350px;">
+    <img src="images/logo-ig1.png" style="width: 410px; height: 65px;">
     <br />
 
     <p class="intro">
