--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        Klik link untuk Bergabung
     </p>
     <p>
-        <a href="https://tinyurl.com/4b2twcxn" class="btn btn-danger tombol">
+        <a href="https://tinyurl.com/yjm9daa3" class="btn btn-danger tombol">
             Gabung Disini
         </a>
       </p>
